adding common vips weather mapper for slu and fmi